--- a/application.html
+++ b/application.html
@@ -22,7 +22,9 @@
     <main>
         <section id="loan-application">
             <h2>Loan Application</h2>
-            <form id="loanForm" method="POST">
+            <form id="loanForm" name="loan-application" method="POST" data-netlify="true">
+    <input type="hidden" name="form-name" value="loan-application">
+
                 <div>
                     <label for="name">Full Name (as per ID):</label>
                     <input type="text" id="name" name="name" required>
@@ -97,29 +99,5 @@
         </div>
     </footer>
 
-    <script>
-        document.getElementById('loanForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            
-            const formData = new FormData(this);
-            
-            try {
-                const response = await fetch('https://formspree.io/f/your-form-id', {
-                    method: 'POST',
-                    body: formData,
-                    headers: { 'Accept': 'application/json' }
-                });
-
-                if (response.ok) {
-                    alert('Application submitted successfully! Check your email for confirmation.');
-                    window.location.href = 'thank_you.html';
-                } else {
-                    alert('Error submitting application. Please try again.');
-                }
-            } catch (error) {
-                alert('An error occurred. Please check your internet connection and try again.');
-            }
-        });
-    </script>
-</body>
+   </body>
 </html>
