--- a/application.html
+++ b/application.html
@@ -22,69 +22,51 @@
     <main>
         <section id="loan-application">
             <h2>Loan Application</h2>
-            <form id="loanForm" name="loan-application" method="POST" data-netlify="true">
-    <input type="hidden" name="form-name" value="loan-application">
+            <form id="loanForm" action="submit_form.php" method="POST">
+                <label for="name">Full Name (as per ID):</label><br>
+                <input type="text" id="name" name="name" required><br><br>
 
-                <div>
-                    <label for="name">Full Name (as per ID):</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
+                <label for="email">Email (Optional):</label><br>
+                <input type="email" id="email" name="email"><br><br>
 
-                <div>
-                    <label for="email">Email (Optional):</label>
-                    <input type="email" id="email" name="email">
-                </div>
+                <label for="phone">Phone Number (with country code):</label><br>
+                <input type="tel" id="phone" name="phone" required><br><br>
 
-                <div>
-                    <label for="phone">Phone Number (with country code):</label>
-                    <input type="tel" id="phone" name="phone" pattern="\+\d{1,3}\d{9,}" required>
-                </div>
+                <label for="amount">Loan Amount (KES 3,000 - 200,000 / Approximately $25 - $1,667 USD):</label><br>
+                <input type="number" id="amount" name="amount" min="3000" max="200000" required><br><br>
 
-                <div>
-                    <label for="amount">Loan Amount (KES 3,000 - 200,000):</label>
-                    <input type="number" id="amount" name="amount" min="3000" max="200000" required>
-                </div>
+                <label for="occupation">Occupation/Business Type:</label><br>
+                <select id="occupation" name="occupation">
+                    <option value="employed">Employed</option>
+                    <option value="self-employed">Self-Employed</option>
+                    <option value="business">Business Owner</option>
+                    <option value="other">Other</option>
+                </select><br><br>
 
-                <div>
-                    <label for="occupation">Occupation/Business Type:</label>
-                    <select id="occupation" name="occupation" required>
-                        <option value="employed">Employed</option>
-                        <option value="self-employed">Self-Employed</option>
-                        <option value="business">Business Owner</option>
-                        <option value="other">Other</option>
-                    </select>
-                </div>
+                <label for="loan_type">Type of Loan:</label><br>
+                <select id="loan_type" name="loan_type">
+                    <option value="personal">Personal</option>
+                    <option value="business">Business</option>
+                    <option value="school_fees">School Fees</option>
+                    <option value="hospital">Hospital</option>
+                    <option value="car">Car Loan</option>
+                    <option value="land">Landed Property Loan</option>
+                </select><br><br>
 
-                <div>
-                    <label for="loan_type">Type of Loan:</label>
-                    <select id="loan_type" name="loan_type" required>
-                        <option value="personal">Personal</option>
-                        <option value="business">Business</option>
-                        <option value="school_fees">School Fees</option>
-                        <option value="hospital">Hospital</option>
-                        <option value="car">Car Loan</option>
-                        <option value="land">Landed Property Loan</option>
-                    </select>
-                </div>
+                <label for="how_hear">How did you hear about us?:</label><br>
+                <select id="how_hear" name="how_hear">
+                    <option value="tiktok">Tiktok</option>
+                    <option value="google">Google</option>
+                    <option value="facebook">Facebook</option>
+                    <option value="whatsapp">Whatsapp</option>
+                    <option value="friends">Friends/Family</option>
+                    <option value="radio">Radio</option>
+                </select><br><br>
 
-                <div>
-                    <label for="how_hear">How did you hear about us?:</label>
-                    <select id="how_hear" name="how_hear" required>
-                        <option value="tiktok">Tiktok</option>
-                        <option value="google">Google</option>
-                        <option value="facebook">Facebook</option>
-                        <option value="whatsapp">Whatsapp</option>
-                        <option value="friends">Friends/Family</option>
-                        <option value="radio">Radio</option>
-                    </select>
-                </div>
+                <input type="checkbox" id="terms" name="terms" required>
+                <label for="terms">I agree to the <a href="terms.html">Loan Terms and Conditions</a></label><br><br>
 
-                <div>
-                    <input type="checkbox" id="terms" name="terms" required>
-                    <label for="terms">I agree to the <a href="terms.html">Loan Terms and Conditions</a></label>
-                </div>
-
-                <button type="submit">Submit Application</button>
+                <input type="submit" value="Submit Application">
             </form>
         </section>
     </main>
@@ -96,8 +78,27 @@
                 <a href="privacy.html">Privacy Policy</a>
                 <a href="terms.html">Terms & Conditions</a>
             </nav>
+            <div class="social-media">
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            </div>
+            <div class="company-info">
+                <p>Okolea Mwananchi is a registered financial institution</p>
+                <p>Reg. No: 9952654 | PIN: 423657</p>
+            </div>
+            <div class="secured-by">
+                <img src="sectigo-badge.png" alt="Secured by Sectigo">
+            </div>
         </div>
     </footer>
 
-   </body>
+    <script>
+        document.getElementById('loanForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent actual form submission
+
+            // Simulate submission and redirect to thank you page
+            window.location.href = 'thank_you.html';
+        });
+    </script>
+</body>
 </html>
