--- a/terms.html
+++ b/terms.html
@@ -5,92 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions - Okolea Mwananchi</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Okolea Mwananchi</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="application.html">Apply Now</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="index.html" class="logo">Okolea Mwananchi</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="application.html">Apply Now</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section id="terms-conditions">
-            <h2>Terms and Conditions</h2>
+            <div class="container">
+                <h2>Terms and Conditions</h2>
 
-            <p>Welcome to Okolea Mwananchi! Please read these Terms and Conditions carefully before using our website or applying for a loan. By accessing or using our services, you agree to be bound by these Terms and Conditions.</p>
+                <p>Welcome to Okolea Mwananchi! Please read these Terms and Conditions carefully before using our website or applying for a loan. By accessing or using our services, you agree to be bound by these Terms and Conditions.</p>
 
-            <h3>1. Loan Terms</h3>
-<p>
-    <ul>
-        <li>Loan amounts range from KSh 3,000 to KSh 200,000.</li>
-        <li>Interest rates are 1% per month.</li>
-        <li>Repayment periods vary depending on the loan amount and your individual circumstances.</li>
-        <li>Loan repayment is made via M-Pesa.</li>
-    </ul>
-</p>
+                <h3>1. Loan Terms</h3>
+                <ul>
+                    <li>Loan amounts range from KSh 3,000 to KSh 200,000.</li>
+                    <li>Interest rates are 1% per month.</li>
+                    <li>Repayment periods vary depending on the loan amount and your individual circumstances.</li>
+                    <li>Loan repayment is made via M-Pesa.</li>
+                </ul>
 
-            <h3>2. Eligibility</h3>
-            <p>
+                <h3>2. Eligibility</h3>
                 <ul>
                     <li>You must be a Kenyan citizen.</li>
                     <li>You must be at least 18 years old.</li>
                     <li>You must have a valid M-Pesa account.</li>
                     <li>Other eligibility criteria may apply.</li>
                 </ul>
-            </p>
 
-            <h3>3. Application Process</h3>
-            <p>
+                <h3>3. Application Process</h3>
                 <ul>
                     <li>Complete the online loan application form accurately and truthfully.</li>
                     <li>Provide all required documentation.</li>
                     <li>We will review your application and notify you of our decision.</li>
                 </ul>
-            </p>
 
-            <h3>4. Repayment</h3>
-            <p>
+                <h3>4. Repayment</h3>
                 <ul>
                     <li>You are responsible for repaying your loan on time and in full.</li>
                     <li>Failure to repay your loan may result in penalties and legal action.</li>
                 </ul>
-            </p>
 
-            <h3>5. Privacy</h3>
-            <p>We are committed to protecting your privacy.  Please see our <a href="privacy.html">Privacy Policy</a> for details on how we collect, use, and share your information.</p>
+                <h3>5. Privacy</h3>
+                <p>We are committed to protecting your privacy.  Please see our <a href="privacy.html">Privacy Policy</a> for details on how we collect, use, and share your information.</p>
 
-            <h3>6. Disclaimer</h3>
-            <p>We make no warranties, express or implied, about the information or services provided on this website. We are not liable for any losses or damages arising from the use of this website or our loan services.</p>
+                <h3>6. Disclaimer</h3>
+                <p>We make no warranties, express or implied, about the information or services provided on this website. We are not liable for any losses or damages arising from the use of this website or our loan services.</p>
 
-            <h3>7. Changes to Terms and Conditions</h3>
-            <p>We may update these Terms and Conditions from time to time.  Please check this page periodically for any changes.</p>
+                <h3>7. Changes to Terms and Conditions</h3>
+                <p>We may update these Terms and Conditions from time to time.  Please check this page periodically for any changes.</p>
 
-            <h3>8. Contact Us</h3>
-            <p>If you have any questions about these Terms and Conditions, please contact us at mwananchihuslerloans@gmail.com or WhatsApp +254757396782.</p>
+                <h3>8. Contact Us</h3>
+                <p>If you have any questions about these Terms and Conditions, please contact us at <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a> or WhatsApp <a href="https://wa.me/254757396782">+254757396782</a>.</p>
+            </div>
         </section>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Okolea Mwananchi</p>
-            <nav>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="terms.html">Terms & Conditions</a>
-            </nav>
-            <div class="social-media">
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 Okolea Mwananchi</p>
+                <nav>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms & Conditions</a>
+                </nav>
+                <div class="social-media">
+                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                    <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                </div>
+                <div class="company-info">
+                    <p>Okolea Mwananchi is a registered financial institution</p>
+                    <p>Reg. No: 9952654 | PIN: 423657</p>
+                </div>
             </div>
-            <div class="company-info">
-    <p>Okolea Mwananchi is a registered financial institution</p>
-    <p>Reg. No: 9952654 | PIN: 423657</p>
-</div>
             <div class="secured-by">
                 <img src="sectigo-badge.png" alt="Secured by Sectigo">
             </div>
