--- a/thank_you.html
+++ b/thank_you.html
@@ -5,45 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You - Okolea Mwananchi</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Okolea Mwananchi</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="application.html">Apply Now</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="index.html" class="logo">Okolea Mwananchi</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="application.html">Apply Now</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section id="thank-you">
-            <h2>Thank You!</h2>
-            <p>Thank you for your application! We have received your request and will review it shortly.</p>
-            <p>You will receive an SMS confirmation within 24 hours regarding the status of your loan.</p> 
-            <p>If you have any questions, please contact us at mwananchihuslerloans@gmail.com or WhatsApp +254757396782.</p>
-            <p><a href="faqs.html">Frequently Asked Questions</a></p>
+            <div class="container">
+                <h2>Thank You!</h2>
+                <p>Thank you for your application! We have received your request and will review it shortly.</p>
+                <p>You will receive an SMS confirmation within 24 hours regarding the status of your loan.</p>
+                <p>If you have any questions, please contact us at <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a> or WhatsApp <a href="https://wa.me/254757396782">+254757396782</a>.</p>
+                <p><a href="faqs.html" class="cta-button">Frequently Asked Questions</a></p>  </div>
         </section>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Okolea Mwananchi</p>
-            <nav>
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="terms.html">Terms & Conditions</a>
-            </nav>
-            <div class="social-media">
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 Okolea Mwananchi</p>
+                <nav>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms & Conditions</a>
+                </nav>
+                <div class="social-media">
+                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                    <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                </div>
+                <div class="company-info">
+                    <p>Okolea Mwananchi is a registered financial institution</p>
+                    <p>Reg. No: 9952654 | PIN: 423657</p>
+                </div>
             </div>
-            <div class="company-info">
-    <p>Okolea Mwananchi is a registered financial institution</p>
-    <p>Reg. No: 9952654 | PIN: 423657</p>
-</div>            <div class="secured-by">
+            <div class="secured-by">
                 <img src="sectigo-badge.png" alt="Secured by Sectigo">
             </div>
         </div>
