--- a/privacy.html
+++ b/privacy.html
@@ -5,16 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Okolea Mwananchi</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Okolea Mwananchi</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="application.html">Apply Now</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="index.html" class="logo">Okolea Mwananchi</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="application.html">Apply Now</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
+    <main>
+        <section id="privacy-policy">
+            <div class="container">
+                <h2>Privacy Policy</h2>
+
+                <p>This Privacy Policy describes how Okolea Mwananchi collects, uses, and protects your personal information when you use our website and services.</p>
+
+                <p><strong>Information We Collect:</strong></p>
+                <ul>
+                    <li>Personal Information: We may collect your name, contact information, and other identifying information.</li>
+                    <li>Financial Information: We may collect information about your income, employment, and financial history.</li>
+                    <li>Usage Information: We may collect information about how you use our website and services.</li>
+                </ul>
+
+                <p><strong>How We Use Your Information:</strong></p>
+                <ul>
+                    <li>To process your loan application.</li>
+                    <li>To communicate with you about your loan.</li>
+                    <li>To improve our website and services.</li>
+                </ul>
+
+                <p><strong>Information Sharing:</strong></p>
+                <p>We do not share your personal information with third parties except as required by law or as necessary to provide our services.</p>
+
+                <p><strong>Data Security:</strong></p>
+                <p>We take reasonable measures to protect your personal information from unauthorized access, use, or disclosure.</p>
+
+                <p><strong>Changes to this Policy:</strong></p>
+                <p>We may update this Privacy Policy from time to time.  Any changes will be posted on this page.</p>
+
+                <p><strong>Contact Us:</strong></p>
+                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:mwananchihuslerloans@gmail.com">mwananchihuslerloans@gmail.com</a>.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 Okolea Mwananchi</p>
+                <nav>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms & Conditions</a>
+                </nav>
+                <div class="social-media">
+                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                    <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                </div>
+                <div class="company-info">
+                    <p>Okolea Mwananchi is a registered financial institution</p>
+                    <p>Reg. No: 9952654 | PIN: 423657</p>
+                </div>
+            </div>
+            <div class="secured-by">
+                <img src="sectigo-badge.png" alt="Secured by Sectigo">
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
