--- a/application.html
+++ b/application.html
@@ -28,8 +28,7 @@
         <section id="loan-application">
             <div class="container">
                 <h2>Loan Application</h2>
-                <form id="loanForm" action="submit_form.php" method="POST">
-                    <div class="form-group">
+                <form id="loanForm" name="loanForm" action="/" method="POST">  <input type="hidden" name="form-name" value="loanForm"> <div class="form-group">
                         <label for="name">Full Name (as per ID):</label>
                         <input type="text" id="name" name="name" required>
                     </div>
