Fixed form detection for Netlify

--- a/application.html
+++ b/application.html
@@ -28,9 +28,9 @@
         <section id="loan-application">
             <div class="container">
                 <h2>Loan Application</h2>
-                <form name="loanForm" method="POST" data-netlify="true">
+                <form name="loanForm" method="POST" data-netlify="true" enctype="multipart/form-data">
                     <input type="hidden" name="form-name" value="loanForm">
-                    
+
                     <div class="form-group">
                         <label for="name">Full Name (as per ID):</label>
                         <input type="text" id="name" name="name" required>
